WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241613
AX: AccessibilityObject::insertText does not insert any text into password fields
https://bugs.webkit.org/show_bug.cgi?id=241613
Summary
AX: AccessibilityObject::insertText does not insert any text into password fi...
Tyler Wilcock
Reported
2022-06-14 14:09:22 PDT
AccessibilityObject::insertText does not insert any text into password fields
Attachments
Patch
(6.45 KB, patch)
2022-06-14 14:29 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(6.30 KB, patch)
2022-06-14 18:01 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-06-14 14:09:31 PDT
<
rdar://problem/95142865
>
Tyler Wilcock
Comment 2
2022-06-14 14:19:05 PDT
rdar://94407238
Tyler Wilcock
Comment 3
2022-06-14 14:29:55 PDT
Created
attachment 460237
[details]
Patch
Andres Gonzalez
Comment 4
2022-06-14 16:57:07 PDT
(In reply to Tyler Wilcock from
comment #3
)
> Created
attachment 460237
[details]
> Patch
--- a/Source/WebCore/accessibility/AccessibilityObject.cpp +++ a/Source/WebCore/accessibility/AccessibilityObject.cpp + bool isPasswordField = false; + if (auto* inputElement = dynamicDowncast<HTMLInputElement>(element)) + isPasswordField = inputElement->isPasswordField(); Can we use the override of isPasswordField() instead of recreating that logic here?
Tyler Wilcock
Comment 5
2022-06-14 18:01:18 PDT
Created
attachment 460244
[details]
Patch
Tyler Wilcock
Comment 6
2022-06-14 18:01:43 PDT
(In reply to Andres Gonzalez from
comment #4
)
> (In reply to Tyler Wilcock from
comment #3
) > > Created
attachment 460237
[details]
> > Patch > > --- a/Source/WebCore/accessibility/AccessibilityObject.cpp > +++ a/Source/WebCore/accessibility/AccessibilityObject.cpp > > + bool isPasswordField = false; > + if (auto* inputElement = dynamicDowncast<HTMLInputElement>(element)) > + isPasswordField = inputElement->isPasswordField(); > > Can we use the override of isPasswordField() instead of recreating that > logic here?
Fixed.
EWS
Comment 7
2022-06-14 23:38:38 PDT
Committed
r295553
(
251558@main
): <
https://commits.webkit.org/251558@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 460244
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug