AX: AccessibilityObject::insertText does not insert any text into password fields https://bugs.webkit.org/show_bug.cgi?id=241613

Reviewed by Chris Fleizach and Andres Gonzalez.

Prior to this patch, AccessibilityObject::insertText used to return
early if Element::shouldUseInputMethod returned false. We need to
exclude password fields from this check, which this patch implements.

* LayoutTests/accessibility/insert-text-into-password-field-expected.txt: Added.
* LayoutTests/accessibility/insert-text-into-password-field.html: Added.
* LayoutTests/platform/glib/TestExpectations: Disable new test.
* LayoutTests/platform/ios/TestExpectations: Enable new test.
* LayoutTests/platform/win/TestExpectations: Disable new test.
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::insertText):

Canonical link: https://commits.webkit.org/251558@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295553 268f45cc-cd09-0410-ab3c-d52691b4dbfc